# elastic-gpt-demo

./: .gitignore  Dockerfile  README.md  config.yaml  elastic-gpt-k8s.yml  elastic_gpt.py  example.env  k8s-secrets-example.yml  pyproject.toml  requirements.txt
.github/workflow/: pus-to-ecr.yml
.github/workflows/: docker-image.yml
src/elastic_gpt_demo/: elastic-gpt-demo.py
src/elastic_gpt_demo/settings/: settings.py
