[tool.poetry]
name = "elastic-gpt-demo"
version = "0.1.0"
description = "Combining the search power of Elasticsearch with the Question Answering power of GPT"
authors = ["face0b1101 <6190957+face0b1101@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.0"
streamlit-authenticator = "^0.2.3"
openai = "^0.28.0"
elasticsearch = "^8.10.0"
decouple = "^0.0.7"
unipath = "^1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
jupyter = "^1.0.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
# make it compatible with black
profile = "black"

[tool.poetry.scripts]
elastic-gpt-demo = 'elastic_gpt_demo.elastic-gpt-demo:main'
